tests/baselines/reference/amdModuleName2.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
amdModuleName2.ts(2,1): error TS2458: An AMD module cannot have multiple name assignments.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== amdModuleName2.ts (1 errors) ====
    ///<amd-module name='FirstModuleName'/>
    ///<amd-module name='SecondModuleName'/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2458: An AMD module cannot have multiple name assignments.
    class Foo {
        x: number;
        constructor() {
            this.x = 5;
        }
    }
    export = Foo;
    